edge_style_vertical_tabs_custom.css
#main .inner {
    background-color: color-mix(in srgb, var(--colorBg) 80%, transparent);
}

.tab-position {
    margin-bottom: 0px;
    margin-left: 3px;
    --Width: 244px !important;
    width: 240px !important;
}

.tab-position .tab {
    border-width: 2px !important;
    padding-bottom: 8px !important;
    padding-right: 0px !important;
    padding-top: 11px !important;
    padding-left: 8px !important;
    transition-duration: 0.2s;
    transition-property: background;
    margin-bottom: 0px !important;
}

.tab-position .tab .title {
    width: 149px;
}

.tab-position .tab.active {
    background-color: var(--colorAccentBgDarker) !important;
    color: var(--colorFgIntense) !important;
    border-width: 2px !important;
    border-color: transparent !important;
    box-shadow: 0px 0px 0px transparent !important;
}

.tab-position .tab:hover {
    background: var(--colorBgLighter) !important;
    color: var(--colorFg) !important;
}

.tab-position .tab .svg-tab-selection {
    margin-top: 0px;
    margin-left: -8px;
}

.tab-position .tab .svg-tab-selection.svg-tab-stack {
    margin-top: -10px;
    margin-left: -6px;
    width: calc(100% - 3px);
}

.tab-position .tab .svg-tab-selection.svg-tab-stack .inner {
    x: 1px;
    y: 1px;
    width: calc(100% - 2.5px) !important;
    height: calc(var(--Height) + 1px) !important;
}

.tab-position .tab .svg-tab-selection.svg-tab-stack .outer {
    x: 1px;
    y: 1px;
    width: calc(100% - 2.5px) !important;
    height: calc(var(--Height) + 1px) !important;
}

.tab-position .tab:not(.tab-in-accordion) {
    margin-top: 5px !important;
}

.tab-position .tab.tab-in-accordion.tab-first-in-group {
    border-top: 2px solid var(--colorHighlightBg) !important;
    border-radius: calc(var(--radius)) !important;
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
    margin-top: 5px !important;
    border-bottom: 0 !important;
}

.tab-position .tab.tab-in-accordion.tab-last-in-group {
    border-bottom: 2px solid var(--colorHighlightBg) !important;
    border-radius: calc(var(--radius)) !important;
    border-top-left-radius: 0 !important;
    border-top-right-radius: 0 !important;
    border-top: 0 !important;
}

.tab-position .tab.tab-in-accordion {
    border-left: 2px solid var(--colorHighlightBg) !important;
    border-right: 2px solid var(--colorHighlightBg) !important;
    border-top-left-radius: 0 !important;
    border-bottom-left-radius: 0 !important;
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
    border-top: 0 !important;
    border-bottom: 0 !important;
}

.tab-position .tab.tab-accordion {
    border: 2px solid var(--colorHighlightBg) !important;
}

.tab-position .tab.unread {
    background-image: linear-gradient(-135deg, var(--colorAccentFgAlpha) 5px, transparent 5px) !important;
}

.tab-position.accordion-toggle-arrow {
    margin-bottom: 3px;
    margin-left: 7px;
    margin-top: 0px;
}

.tab-position.accordion-toggle-arrow .VivaldiSvgIcon {
    color: var(--colorHighlightBg);
    margin-top: -1px;
}

#browser:not(.alt-tabs) #tabs-container .close {
    margin-right: 2px !important;
}

.tab.pinned .title {
    display: none;
}

.tab.pinned:hover > .tab-header > .favicon > img {
    margin-left: 1px;
}

.tab.pinned> .tab-header > .favicon {
    margin-left: 3px;
}

.tabs-left #main {
    margin-left: 0px;
}

#tabs-container {
    border-color: var(--colorBgDarker) !important;
}

#main #tabs-container.left,
#main #tabs-container.right {
    background-color: color-mix(in srgb, var(--colorBg) 87%, transparent);
    backdrop-filter: blur(20px);
    box-shadow: 2px 0px 6px -2px rgba(0, 0, 0, 0.6) !important;
    height: calc(100% - 85px);
    top: 52px;
    left: -249px;
    padding-top: 0px;
    border-radius: 10px;
    width: 250px !important;
}

#main #tabs-container.left:hover,
#main #tabs-container.right:hover {
    left: 0px;
    transition:
        left  0.15s ease-out 0.1s;
}

#tabs-container.left:not(:hover),
#tabs-container.right:not(:hover) {
    transition:
        left  0.15s ease-in 0.2s;
}

.button-toolbar.newtab {
    border-top: 0px;
    display: flex !important;
}

.resize > .tab-strip > .toolbar-tabbar {
    grid-column: span 5;
    background-color: transparent;
}

.resize > .tab-strip > .separator {
    height: 9px;
    grid-column: span 5;
    --PositionY: 5px !important;
    position: relative;
}

.resize > .tab-strip > .separator > hr {
    background-color: var(--colorFg);
    border: 0px;
    height: 4px;
    margin-top: 0px;
    margin-bottom: 0px;
}

#tabs-container > .resize > .tab-strip > .toolbar.toolbar-tabbar.toolbar-large.tab-position > .button-toolbar > button {
    display: flex;
}

.toolbar-tabbar > .button-toolbar > button {
    width: 30px;
}

#tabs-container:not(:hover) > .resize > .tab-strip > .toolbar.toolbar-tabbar.toolbar-large.tab-position > .button-toolbar > button > span {
    justify-content: flex-start;
    margin-left: 6px;
    padding-left: 2px;
}

#tabs-container:hover > .resize > .tab-strip > .toolbar.toolbar-tabbar.toolbar-large.tab-position > .button-toolbar > button > span {
    margin-left: 6px;
    padding-left: 2px;
}

.color-behind-tabs-on .toolbar-tabbar > .button-toolbar > button, .color-behind-tabs-on .toolbar-tabbar > .toolbar-group > .button-toolbar > button {
    color: var(--colorImageFg, var(--colorFgIntense));
}

#tabs-container:hover .toolbar-tabbar .newtab > button::after {
    color: var(--colorImageFg, var(--colorFgIntense));
    padding-left: 1px;
}

#tabs-container .toolbar-tabbar .newtab > button::after {
    content: "New Tab";
    color: var(--colorImageFg, var(--colorFgIntense));
    width: 100%;
    display: inline-block;
    margin-top: 0px;
    padding-left: 1px;
}

#tabs-container .sync-and-trash-container .toggle-trash button span {
    margin-left: 41px;
}

#tabs-container .sync-and-trash-container .synced-tabs-button button span {
    margin-left: 37px;
}

#tabs-container .sync-and-trash-container .toggle-trash button::after {
    content: "Trash";
}

#tabs-container .sync-and-trash-container .synced-tabs-button button::after {
    content: "Sync";
}

#tabs-container:hover .sync-and-trash-container .synced-tabs-button span::after,
#tabs-container:hover .sync-and-trash-container .toggle-trash button span::after {
    display: none;
}

#tabs-container .sync-and-trash-container .toggle-trash button::after,
#tabs-container .sync-and-trash-container .synced-tabs-button button::after {
    display: inline-block;
    margin-top: 0px;
    padding-left: 1px;
    cursor: pointer;
}

.color-behind-tabs-on .tab-position .tab {
    color: var(--colorFgFadedMore);
}

#tabs-container:hover .sync-and-trash-container .toggle-trash button::after,
#tabs-container:hover .sync-and-trash-container .synced-tabs-button button::after {
    margin-top: 0px;
    padding-left: 1px;
    color: var(--colorImageFg, var(--colorFgIntense));
}

.toggle-trash,
.sync-and-trash-container {
    display: block;
    width: 100%;
    margin-bottom: -2px;
}

.tab-audio {
    transform: scale(0.6) !important;
    bottom: 0px;
    border-radius: var(--radiusRound);
    background-color: #fff;
    comment: "#8ca6a6";
    text: "#004d57";
    keyword: "#ff5792";
    variable: "#fa8900";
    annotation: "#b3694d";
    constant: "#a88c00";
    tag: "#e64100";
    string: "#00b368";
    stringInterpolated: "#009456";
    number: "#5842ff";
    function: "#0095a8";
    support: "#00bdd6";
    misc: "#0094f0";
    invalid: "#ff530f";
    a: "#bbc3c4";
    height: 20px;
    width: 20px;
    padding: 2px;
}

.audioicon {
    filter: brightness(0) saturate(100%);
}

.svg-tab-stack .stack-frame {
    stroke: transparent !important;
}

.accordion-toggle-arrow.closed.active {
    background-color: inherit;
    fill: var(--colorHighlightBg);
}

.maximized .inner > div:nth-child(2) {
    width: 0px !important
}

.normal .inner > div:nth-child(2) {
    width: 0px !important
}

.UrlBar-PrivateWindowIndicator {
    padding: 0 90px 0 6px;
    color: transparent;
}

#browser.fullscreen #webview-container {
    margin-left: 0px;
}

.tab-strip>span:has(.tab-position:not(.is-pinned)) {
    grid-column: span 5;
    display: flex;
}

#tabs-container .tab-strip {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(42px, 1fr));
    grid-auto-rows: max-content;
    padding: 0px !important;
    padding-top: 10px !important;
    overflow-x: hidden;
}

#tabs-container .tab-strip::-webkit-scrollbar {
    width: 10px;
}

#tabs-container .tab-strip::-webkit-scrollbar-track {
    background-color: transparent;
}

#tabs-container .tab-strip::-webkit-scrollbar-thumb {
    border-radius: 3px;
    background-color: var(--colorBg);
}

#tabs-container .tab-strip::-webkit-scrollbar-button {
    height: 10px;
    visibility: collapse;
}

div#vivaldi-tooltip {
    margin-left: 10000px !important;
    display: none;
}

